# Seniales

./: CMakeLists.txt  EventHandler.h  Partido.cpp  Partido.h  SIGINT_Handler.h  SIGINT_Handler_Partidos.h  SIGUSR2_Handler.h  SignalHandler.cpp  SignalHandler.h  main.cpp
